# lengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cc
src/core/: common.h  timer.h  types.h  utils.h
src/defaults/: default.frag  default.vert
src/defaults/compiled_shaders/: default.frag.spv  default.vert.spv
src/ecs/: material.h
src/ecs/components/: collider.h  component.h  gjk.cc  gjk.h  material.h  transform.cc  transform.h
src/ecs/components/colliders/: mesh_colider.h  mesh_collider.cc
src/ecs/systems/: collision.h  system.h
src/graphics/: render.h  render_settings.h  renderer.cc
src/graphics_backend/: backend_manager.cc  backend_manager.h  backend_settings.cc  backend_settings.h  resource_manager.cc  resource_manager.h  shader.cc  shader.h  utils.cc  utils.h  vulkan_extensions.h  window.cc  window.h  window_callbacks.cc  window_callbacks.h
src/graphics_backend/buffers/: buffer.cc  buffer.h  index_buffer.cc  index_buffer.h  staging_buffer.cc  staging_buffer.h  uniform_buffer.cc  uniform_buffer.h  vertex_buffer.cc  vertex_buffer.h  vertex_buffer_layout.h
src/tests/: test_utils.h  tests.cc  tests.h
src/tests/core/: timer_tests.cc  timer_tests.h
